# factory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.yaml  go.mod  repos.yaml
.factory/: AGENTS.md  Dockerfile  JOURNAL.md  STANDARDS.md  config.toml  tickets.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: design.md  docker-sandbox-template.md  factory-loop.md  factory-standard.md  jira.md  labels.md  local-v1.md  objective-examples.md  operating-principles.md  operations.md  prd.md  repo-quality-standard.md  standards-examples.md  target-repo.md  what-makes-a-great-software-project.md  workflow-examples.md
examples/: config.toml  implement-ready-ticket.md  jira-config.toml  jira-implement.md  jira-triage.md  triage-ticket.md
playbooks/: curate-awesome-ai.md  daily-audit.md  repo-audit.md
policies/: business-site.md  curated-list.md  default.md  private-operating-repo.md  product-experiment.md  public-resource-repo.md  public-tooling-repo.md
projects/: cortex.yaml
scripts/: create-demo-issue.sh
src/: agent.rs  approval.rs  approve.rs  clone.rs  config.rs  daemon.rs  docker.rs  execution.rs  github.rs  hash.rs  init.rs  inspection.rs  lib.rs  main.rs  runtime.rs  sandbox.rs  source.rs  storage.rs  table.rs  workflow.rs  workflow_create.rs  workspace.rs
standards/: defaults.yaml  labels.yaml  project-checklist.md
tests/: agent_commands.rs  cleanup_cli.rs  daemon.rs  demo_script.rs  github_effects.rs  github_polling.rs  github_project_polling.rs  init_cli.rs  (+12 more)
(+96 files in other folders)
