[package]
name = "factory"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A local-first supervisor for agent workflows"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
humantime = "2.2"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
