[package]
name = "factory"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A local-first supervisor for agent workflows"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10"
cron = "0.15"
dirs = "6.0"
getrandom = "0.3"
humantime = "2.2"
regex = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
tempfile = "3.20"
tokio = { version = "1.47", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
toml_edit = "0.23"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
